--- a/package.json
+++ b/package.json
@@ -1,31 +1,18 @@
 {
-  "name": "pgdc-official-github-io",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "pgdc-official.github.io",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "server": "nodemon server/server.js",
+    "client": "npm run dev --prefix client",
+    "concurrently": "concurrently \"npm run server\" \"npm run client\""
   },
+  "keywords": [],
+  "author": "its-hmtu <tu.hoangminh15@gmail.com>",
+  "license": "ISC",
+  "repository": "https://github.com/PGDC-Official/PGDC-Official.github.io.git",
   "dependencies": {
-    "axios": "^1.6.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
-    "redux": "^5.0.1",
-    "sass": "^1.75.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "concurrently": "^8.2.2"
   }
 }
