--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.22.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
+    "sass": "^1.83.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
