--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.22.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "sass": "^1.83.0"
   },
