--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,9 @@ jobs:
           node-version: '20'
       
       - name: Install dependencies
+        run: npm install
+
+      - name: Build
         run: npm run build
 
       - name: Deploy to GitHub Pages
